# pega

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
pega/: __about__.py  __init__.py  cli.py
tests/: __init__.py  test_commands.sh  test_pega.py
